# mlops-course

./: .pre-commit-config.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
classifier/: infer.py  train.py  trainer.py
configs/data/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
data/: data.zip.dvc  train_11k.dvc  val.dvc
dataset/: utils.py
